issues word wrap

--- a/src/components/panel.module.scss
+++ b/src/components/panel.module.scss
@@ -230,6 +230,7 @@
     gap: $gap-8;
     flex-grow: 2;
     flex-basis: 0;
+    word-wrap: break-word;
   }
 
   .actions {
